// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should match snapshot 1`] = `
<t-modal>
  <mock:shadow-root></mock:shadow-root>
  Label
</t-modal>
`;

exports[`Modal should match snapshot when opened 1`] = `
<t-modal opened="">
  <mock:shadow-root>
    <div class="modal">
      <div class="modal__backdrop"></div>
      <div class="modal">
        <div class="modal__body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</t-modal>
`;

exports[`Modal should match snapshot with actions slot 1`] = `
<t-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="modal-actions">
    Action buttons
  </span>
  Content
</t-modal>
`;

exports[`Modal should match snapshot with header slot 1`] = `
<t-modal>
  <mock:shadow-root></mock:shadow-root>
  <span slot="header">
    Header content
  </span>
  A title
</t-modal>
`;
